# vibesecure

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile.backend  Dockerfile.client  FRONTEND_API_GUIDE.md  LICENSE  RAG_AGENT_INTEGRATION_SUMMARY.md  README.md  docker-compose.yml
backend/: TESTING.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: dependencies.py  main.py
backend/app/agents/: __init__.py  auditor_agent.py  base_agent.py  bias_fairness_agent.py  deepfake_triage_agent.py  digital_asset_agent.py  ensemble_voter_agent.py  errors.py  forensic_analysis_agent.py  keyframe_extractor_agent.py  messaging.py  predictive_risk_agent.py  privacy_scanner_agent.py  regulatory_mapper_agent.py  supervisor.py  threat_pattern_agent.py
backend/app/core/: audit.py  circuit_breaker.py  database.py  events.py  health.py  metrics.py  middleware.py  security.py  tracing.py
backend/app/graphs/: __init__.py  main_graph.py  state.py
backend/app/models/: __init__.py  audit.py  consent.py  domain.py  scan.py  user.py  webhook.py
backend/app/prompts/: __init__.py  bias_prompt.py  forensic_prompt.py  privacy_prompt.py  regulatory_prompt.py  risk_prompt.py  supervisor_prompt.py  threat_prompt.py  triage_prompt.py
backend/app/routers/: __init__.py  _service_helpers.py  ai_test.py  auth.py  consent.py  deepfake.py  digital_asset.py  domain.py  privacy.py  responsible_ai.py  scan.py  threat_intel.py  webhooks.py
backend/app/schemas/: __init__.py  agent_outputs.py  ai_test.py  scan.py  services.py
backend/app/services/: email.py  webhook_service.py
backend/app/tools/: gemini_tools.py
backend/app/utils/: cache.py  consent.py  domain.py  errors.py  guardrails.py  helpers.py  http_client.py  reports.py  verification.py
backend/app/worker/: __init__.py  celery_app.py  governance_tasks.py  library_detector.py  reflection_check.py  scanner.py  tasks.py  wordlist_probe.py  zap_client.py
backend/app/worker/checks/: __init__.py  cors_checker.py  directory_checker.py  endpoint_checker.py  header_checker.py  https_checker.py  library_checker.py  reflection_checker.py  tls_checker.py
backend/scripts/: demo_upsert.py  rag_deepfake.py  rag_threat_regulatory.py  rag_upsert.py  rag_verify.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  base_agent.py  gemini_client.py  graph.py  messaging.py  state.py  supervisor.py
backend/src/agents/deepfake/: __init__.py  ensemble_voter.py  forensic_agent.py  keyframe_extractor.py  triage_agent.py
backend/src/agents/digital_asset/: __init__.py  digital_asset_agent.py
backend/src/agents/privacy/: __init__.py  privacy_scanner_agent.py  regulatory_mapper_agent.py
backend/src/agents/responsible_ai/: __init__.py  auditor_agent.py  bias_fairness_agent.py
backend/src/agents/threat_intel/: __init__.py  predictive_risk_agent.py  threat_pattern_agent.py
backend/src/api/: __init__.py  auth.py  consent.py  domains.py  governance.py  rag.py  scans.py
backend/src/auth/: __init__.py  dependencies.py  provider.py
backend/src/core/: config.py  database.py  middleware.py  models.py
backend/src/rag/: __init__.py  core.py
backend/src/services/: email.py
backend/src/utils/: cache.py  consent.py  errors.py  reports.py  verification.py
backend/src/worker/: __init__.py  celery_app.py  governance_tasks.py  playwright_scanner.py  scanner.py  tasks.py  zap_client.py
backend/src/worker/checks/: __init__.py  base_checker.py  cors_checker.py  directory_checker.py  endpoint_checker.py  header_checker.py  https_checker.py  library_checker.py  reflection_checker.py  tls_checker.py
client/: docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/public/: config.js
client/src/: App.jsx  (+2 more)
(+24 files in other folders)
